<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_nav_search"
        android:icon="@drawable/icon_icon_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/id_nav_favorite"
        android:icon="@drawable/icon_icon_favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/id_nav_new_obj"
        android:icon="@drawable/icon_icon_new_obj"
        android:title="@string/title_newObj" />
    <item
        android:id="@+id/id_nav_message"
        android:icon="@drawable/icon_icon_message"
        android:title="@string/title_message" />
    <item
        android:id="@+id/id_nav_member"
        android:icon="@drawable/icon_icon_member"
        android:title="@string/title_member" />

</menu>
